--- a/castle/src/main/resources/application.properties
+++ b/castle/src/main/resources/application.properties
@@ -1,14 +1,20 @@
 spring.application.name=castle
 
+#ServerPort
 server.port=8080
 
+#spring mvc
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 
-
-
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring jdbc
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.username=system
 spring.datasource.password=1234
+
+#mybatis
+mybatis.mapper-locations=mapper/**/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.type-aliases-package=com.example.demo.mapper.domain
