--- a/castle/src/main/resources/application.properties
+++ b/castle/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.datasource.password=1234
 mybatis.mapper-locations=mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 #mybatis.type-aliases-package=com.example.demo.mapper.domain
+
+#message
+sms.send.message.yn=N
