--- a/castle/build.gradle
+++ b/castle/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	implementation 'javax.servlet:jstl:1.2'
 	
 	//Spring Security
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
