--- a/castle/src/main/resources/application.properties
+++ b/castle/src/main/resources/application.properties
@@ -21,3 +21,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 #message
 sms.send.message.yn=N
+
+# spring filter order
+spring.security.filter.order=1
