--- a/castle/src/main/resources/application.properties
+++ b/castle/src/main/resources/application.properties
@@ -22,5 +22,8 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #message
 sms.send.message.yn=N
 
+#session time out 1000 * 60 * 60 * 2 (2시간)
+server.session.timeout=1000 * 60 * 60 * 2
+
 # spring filter order
 spring.security.filter.order=1
