--- a/castle/src/main/resources/application.properties
+++ b/castle/src/main/resources/application.properties
@@ -9,15 +9,28 @@ spring.mvc.view.suffix=.jsp
 
 
 #spring jdbc
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.username=system
 spring.datasource.password=1234
+
+
+
+# 로그 관련 설정
+logging.level.jdbc.sqlonly=off
+logging.level.jdbc.sqltiming=debug
+logging.level.jdbc.resultsettable=debug
+logging.level.jdbc.audit=off
+logging.level.jdbc.resultset=off
+logging.level.jdbc.connection=off
+
 
 #mybatis
 mybatis.mapper-locations=mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
-#mybatis.type-aliases-package=com.example.demo.mapper.domain
+#여러개 사용시 ,로 구분 ex)mybatis.type-aliases-package=com.shine.castle.security.vo, mybatis.type-aliases-package=com.shine.castle.security.vo2
+mybatis.type-aliases-package=com.shine.castle.security.vo
 
 #message
 sms.send.message.yn=N
