--- a/castle/src/main/resources/application.properties
+++ b/castle/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 #spring mvc
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-
+server.servlet.jsp.init-parameters.development=true 
 
 #spring jdbc
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
