--- a/castle/src/main/resources/application.properties
+++ b/castle/src/main/resources/application.properties
@@ -30,7 +30,7 @@ logging.level.jdbc.connection=off
 mybatis.mapper-locations=mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 #여러개 사용시 ,로 구분 ex)mybatis.type-aliases-package=com.shine.castle.security.vo, mybatis.type-aliases-package=com.shine.castle.security.vo2
-mybatis.type-aliases-package=com.shine.castle.security.vo
+mybatis.type-aliases-package=com.shine.castle.security.vo, com.shine.castle.config
 
 #message
 sms.send.message.yn=N
