--- a/castle/src/main/resources/application.properties
+++ b/castle/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mvc.view.suffix=.jsp
 server.servlet.jsp.init-parameters.development=true 
 
 #spring jdbc
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.45.40:1521:xe
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.username=system
@@ -40,3 +40,12 @@ server.session.timeout=1000 * 60 * 60 * 2
 
 # spring filter order
 spring.security.filter.order=1
+
+# spring mail send
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=eogh20001@gmail.coms
+spring.mail.password=xpmk rzut tcqw qymk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
