--- a/castle/src/main/resources/application.properties
+++ b/castle/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.servlet.jsp.init-parameters.development=true
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@211.201.93.75:9088:xe
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.username=system
+spring.datasource.username=castle
 spring.datasource.password=1234
 
 
