--- a/castle/src/main/resources/application.properties
+++ b/castle/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.mvc.view.suffix=.jsp
 server.servlet.jsp.init-parameters.development=true 
 
 #spring jdbc
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@211.201.93.75:9088:xe
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@211.201.93.75:9088:xe
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@127.0.0.1:1521:xe
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.username=castle
@@ -43,9 +44,9 @@ spring.security.filter.order=1
 
 # spring mail send
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=eogh20001@gmail.coms
-spring.mail.password=xpmk rzut tcqw qymk
+spring.mail.port=${mail_port}
+spring.mail.username=${mail_user}
+spring.mail.password=${mail_pass}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
