--- a/castle/build.gradle
+++ b/castle/build.gradle
@@ -20,6 +20,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	
+	//mail send
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	
 	//Tomcat Server
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	implementation 'javax.servlet:jstl:1.2'
