--- a/castle/src/main/resources/application.properties
+++ b/castle/src/main/resources/application.properties
@@ -25,6 +25,7 @@ logging.level.jdbc.resultsettable=debug
 logging.level.jdbc.audit=off
 logging.level.jdbc.resultset=off
 logging.level.jdbc.connection=off
+logging.level.com.shine.castle=debug
 
 
 #mybatis
